# TerminalAI

./: .gitignore  ADD_COMMAND.md  Cargo.toml  Cross.toml  DOCKER_ALPINE.md  Dockerfile.alpine  Dockerfile.test-cross-compilation  INSTALL.md  LICENSE  README.md  build-alpine.sh  build-install.sh  build.sh  build_macos_arm.sh  build_ubuntu_ci.sh  docker-compose.alpine.yml  docker-quick-start.sh  format_project.sh  terminalai.conf  test_cross_compilation.sh  test_docker_cross_compilation.sh  test_independence.sh  test_local.sh  verify_cross_fix.sh  verify_openssl_fix.sh
.github/workflows/: ci-cd.yml  notarize.yml
cmd/: cp.conf  find.conf  grep.conf  ps.conf  resolve.conf  template.conf
scripts/: pre-commit.sh  sign_macos_binaries.sh  verify_macos_signatures.sh
src/: command_parser.rs  command_validator.rs  config.rs  lib.rs  main.rs  orchestrator.rs  providers.rs  query_provider.rs
tests/: integration_tests.rs  resolve_ai_tests.rs
